@@ -1,3 +1,7 @@
+2013-02-05  Alan Modra  <amodra@gmail.com>
+
+	* configure: Regenerate after syncing config/.
+
 2013-01-15  Jan-Benedict Glaw  <jbglaw@lug-owl.de>
 
 	* configure.ac: Sync with GCC repo.
